# Meson_trainee

./: meson.build
abstract_factory/: meson.build
abstract_factory/source/: meson.build
abstract_factory/test/: meson.build
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/abstract_factory/: example_task  testprog
builddir/meson-info/: intro-buildsystem_files.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
builddir/meson-private/: coredata.dat.prev
