source_sources = files('ConcreteFactory1.cpp', 'ConcreteFactory2.cpp', 
                'ConcreteProductA1.cpp', 'ConcreteProductA2.cpp', 
                'ConcreteProductB1.cpp', 'ConcreteProductB2.cpp')
project_sources += source_sources

#source_lib = static_library('source',
#                        sources : source_sources,
#                        include_directories : inc)